fixed overflow scroll in contacts

--- a/templates/media/css/dashboard.css
+++ b/templates/media/css/dashboard.css
@@ -389,6 +389,8 @@
 
 #contacts-box {
     height: 400px;
+}
+#all-contacts {
     overflow: scroll;
 }
 
